--- a/.gitattributes
+++ b/.gitattributes
@@ -480,11 +480,14 @@ docs/Contributors.txt svneol=native#text/plain
 docs/CrossCompile.txt svneol=native#text/plain
 docs/DesignGuidelines.txt svneol=native#text/plain
 docs/ExtendingTheIDE.txt svneol=native#text/plain
+docs/FAQ svneol=native#text/plain
 docs/ForDelphians.txt svneol=native#text/plain
+docs/INSTALL svneol=native#text/plain
 docs/LCLMessages.txt svneol=native#text/plain
 docs/LazarusIDEInternals.pdf -text svneol=unset#application/pdf
 docs/Packages.txt svneol=native#text/plain
 docs/RemoteDebugging.txt svneol=native#text/plain
+docs/TODO svneol=native#text/plain
 docs/html/sourceforgefooter.xml svneol=native#text/xml
 docs/html/update_gtkintf_html.sh -text svneol=native#application/x-sh
 docs/html/update_html.sh -text svneol=native#application/x-sh
