moved stylesheet from source directory to docs/html
 SVN 7437@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -488,6 +488,7 @@ docs/LazarusIDEInternals.pdf -text svneol=unset#application/pdf
 docs/Packages.txt svneol=native#text/plain
 docs/RemoteDebugging.txt svneol=native#text/plain
 docs/TODO svneol=native#text/plain
+docs/html/fpdoc.css svneol=native#text/css
 docs/html/sourceforgefooter.xml svneol=native#text/xml
 docs/html/update_gtkintf_html.sh -text svneol=native#application/x-sh
 docs/html/update_html.sh -text svneol=native#application/x-sh
@@ -1365,7 +1366,6 @@ lcl/filectrl.pp svneol=native#text/pascal
 lcl/fileutil.pas svneol=native#text/pascal
 lcl/forms.pp svneol=native#text/pascal
 lcl/fpcadds.pas svneol=native#text/pascal
-lcl/fpdoc.css svneol=native#text/css
 lcl/graphics.pp svneol=native#text/pascal
 lcl/graphmath.pp svneol=native#text/pascal
 lcl/graphtype.pp svneol=native#text/pascal
