--- a/.gitattributes
+++ b/.gitattributes
@@ -1897,10 +1897,10 @@ tools/install/macosx/fpc_installer_info.zip -text svneol=unset#application/zip
 tools/install/replace_in_files.pl -text svneol=native#application/x-perl
 tools/install/setup.sh -text svneol=native#application/x-sh
 tools/install/smart_strip.sh -text svneol=native#application/x-sh
-tools/install/win32/build-fpc.bat -text svneol=native#application/x-msdos-program
-tools/install/win32/build-lazarus.bat -text svneol=native#application/x-msdos-program
-tools/install/win32/create_installer.bat -text svneol=native#application/x-msdos-program
-tools/install/win32/create_snapshot_installer.bat -text svneol=native#application/x-msdos-program
+tools/install/win32/build-fpc.bat svneol=native#text/x-msdos-program
+tools/install/win32/build-lazarus.bat svneol=native#text/x-msdos-program
+tools/install/win32/create_installer.bat svneol=native#text/x-msdos-program
+tools/install/win32/create_snapshot_installer.bat svneol=native#text/x-msdos-program
 tools/install/win32/editoroptions.xml svneol=native#text/xml
 tools/install/win32/environmentoptions.xml svneol=native#text/xml
 tools/install/win32/lazarus_install_cheetah.bmp -text svneol=unset#image/bmp
