--- a/.gitattributes
+++ b/.gitattributes
@@ -744,6 +744,8 @@ examples/turbopower_ipro/mainunit.pas svneol=native#text/pascal
 examples/turbopower_ipro/simplepage2.html svneol=native#text/html
 examples/turbopower_ipro/tpiproexample.lpi svneol=native#text/plain
 examples/turbopower_ipro/tpiproexample.lpr svneol=native#text/pascal
+ide/Makefile svneol=native#text/plain
+ide/Makefile.fpc svneol=native#text/plain
 ide/aboutfrm.lfm svneol=native#text/plain
 ide/aboutfrm.lrs svneol=native#text/pascal
 ide/aboutfrm.pas svneol=native#text/pascal
