started portuguese translation   from Erivelton Silva
 SVN 7452@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -1325,6 +1325,7 @@ languages/objinspstrconsts.fr.po svneol=native#text/plain
 languages/objinspstrconsts.it.po svneol=native#text/plain
 languages/objinspstrconsts.itiso.po svneol=native#text/plain
 languages/objinspstrconsts.nl.po svneol=native#text/plain
+languages/objinspstrconsts.pb.po svneol=native#text/plain
 languages/objinspstrconsts.pl.po svneol=native#text/plain
 languages/objinspstrconsts.pliso.po svneol=native#text/plain
 languages/objinspstrconsts.plwin.po svneol=native#text/plain
