added languages/lazaruside.pb.po so that the IDE recognizes portuguese
 SVN 7453@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -1308,6 +1308,7 @@ languages/lazaruside.he.po svneol=native#text/plain
 languages/lazaruside.it.po svneol=native#text/plain
 languages/lazaruside.itiso.po svneol=native#text/plain
 languages/lazaruside.nl.po svneol=native#text/plain
+languages/lazaruside.pb.po svneol=native#text/plain
 languages/lazaruside.pl.po svneol=native#text/plain
 languages/lazaruside.pliso.po svneol=native#text/plain
 languages/lazaruside.plwin.po svneol=native#text/plain
