added Michael VCs packages to create project templates and customforms for the IDE
 SVN 7454@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -62,6 +62,14 @@ components/codetools/resourcecodetool.pas svneol=native#text/pascal
 components/codetools/sourcechanger.pas svneol=native#text/pascal
 components/codetools/sourcelog.pas svneol=native#text/pascal
 components/codetools/stdcodetools.pas svneol=native#text/pascal
+components/customform/custforms.pp svneol=native#text/plain
+components/customform/demo/appform.pas svneol=native#text/plain
+components/customform/demo/appforms.lpk svneol=native#text/plain
+components/customform/demo/appforms.pas svneol=native#text/plain
+components/customform/demo/dbappform.pas svneol=native#text/plain
+components/customform/demo/regappforms.pp svneol=native#text/plain
+components/customform/lazcustforms.lpk svneol=native#text/plain
+components/customform/lazcustforms.pas svneol=native#text/plain
 components/fpcunit/fpcunittestrunner.lpk svneol=native#text/pascal
 components/fpcunit/fpcunittestrunner.pas svneol=native#text/pascal
 components/fpcunit/guitestrunner.lfm svneol=native#text/plain
@@ -182,6 +190,16 @@ components/printers/win32/winprinters.inc svneol=native#text/pascal
 components/printers/win32/winprinters_h.inc svneol=native#text/pascal
 components/printers/win32/winutilprn.pas svneol=native#text/pascal
 components/printers/win32/winutilprnconst.inc svneol=native#text/pascal
+components/projecttemplates/frmtemplatesettings.lfm svneol=native#text/plain
+components/projecttemplates/frmtemplatesettings.lrs svneol=native#text/plain
+components/projecttemplates/frmtemplatesettings.pas svneol=native#text/plain
+components/projecttemplates/frmtemplatevariables.lfm svneol=native#text/plain
+components/projecttemplates/frmtemplatevariables.lrs svneol=native#text/plain
+components/projecttemplates/frmtemplatevariables.pas svneol=native#text/plain
+components/projecttemplates/idetemplateproject.pp svneol=native#text/plain
+components/projecttemplates/projecttemplates.pp svneol=native#text/plain
+components/projecttemplates/projtemplates.lpk svneol=native#text/plain
+components/projecttemplates/projtemplates.pas svneol=native#text/plain
 components/rtticontrols/baseicon.png -text svneol=unset#image/png
 components/rtticontrols/examples/example1.lfm svneol=native#text/plain
 components/rtticontrols/examples/example1.lrs svneol=native#text/pascal
