added new session property storage editor from Michael VC
 SVN 7459@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -951,6 +951,9 @@ ideintf/fieldslist.lfm svneol=native#text/plain
 ideintf/fieldslist.lrs svneol=native#text/pascal
 ideintf/fieldslist.pas svneol=native#text/pascal
 ideintf/formeditingintf.pas svneol=native#text/pascal
+ideintf/frmselectprops.lfm svneol=native#text/plain
+ideintf/frmselectprops.lrs svneol=native#text/plain
+ideintf/frmselectprops.pas svneol=native#text/plain
 ideintf/graphpropedits.pas svneol=native#text/pascal
 ideintf/helpfpdoc.pas svneol=native#text/pascal
 ideintf/helphtml.pas svneol=native#text/pascal
