added package links for new packages
 SVN 7463@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -1868,6 +1868,8 @@ packager/addfiletoapackagedlg.pas svneol=native#text/pascal
 packager/addtopackagedlg.pas svneol=native#text/pascal
 packager/basepkgmanager.pas svneol=native#text/pascal
 packager/brokendependenciesdlg.pas svneol=native#text/pascal
+packager/globallinks/lazcustomform-0.lpl svneol=native#text/plain
+packager/globallinks/projtemplates-0.lpl svneol=native#text/plain
 packager/installpkgsetdlg.lfm svneol=native#text/plain
 packager/installpkgsetdlg.lrs svneol=native#text/pascal
 packager/installpkgsetdlg.pas svneol=native#text/pascal
