--- a/.gitattributes
+++ b/.gitattributes
@@ -927,8 +927,8 @@ ide/uniteditor.pp svneol=native#text/pascal
 ide/unitinfodlg.pp svneol=native#text/pascal
 ide/viewforms1.lrs svneol=native#text/pascal
 ide/viewunit_dlg.lfm svneol=native#text/plain
+ide/viewunit_dlg.lrs svneol=native#text/pascal
 ide/viewunit_dlg.pp svneol=native#text/pascal
-ide/viewunits1.lrs svneol=native#text/pascal
 ide/wordcompletion.pp svneol=native#text/pascal
 ideintf/actionseditor.lfm svneol=native#text/plain
 ideintf/actionseditor.lrs svneol=native#text/pascal
