added saving and opening from file   from Darius
 SVN 7477@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -815,6 +815,8 @@ ide/delphiunit2laz.lfm svneol=native#text/plain
 ide/delphiunit2laz.lrs svneol=native#text/pascal
 ide/delphiunit2laz.pas svneol=native#text/pascal
 ide/dialogprocs.pas svneol=native#text/pascal
+ide/diffdialog.lfm svneol=native#text/plain
+ide/diffdialog.lrs svneol=native#text/plain
 ide/diffdialog.pas svneol=native#text/pascal
 ide/diffpatch.pas svneol=native#text/pascal
 ide/diskdiffsdialog.pas svneol=native#text/pascal
