added template rpm specs for snapshot rpm building, adapted from examples from Joost
 SVN 7558@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -1927,6 +1927,8 @@ tools/install/file_filter.sh -text svneol=native#application/x-sh
 tools/install/get_lazarus_version.sh -text svneol=native#application/x-sh
 tools/install/macosx/fpc_installer_info.zip -text svneol=unset#application/zip
 tools/install/replace_in_files.pl -text svneol=native#application/x-perl
+tools/install/rpm/fpc.spec.template svneol=native#text/plain
+tools/install/rpm/lazarus.spec.template svneol=native#text/plain
 tools/install/setup.sh -text svneol=native#application/x-sh
 tools/install/smart_strip.sh -text svneol=native#application/x-sh
 tools/install/win32/build-fpc.bat svneol=native#text/x-msdos-program
