added scripts for snapshot rpm building
 SVN 7559@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -1910,6 +1910,7 @@ tools/find_non_cvs_files.pl -text svneol=native#application/x-perl
 tools/getallmofiles.sh -text svneol=native#application/x-sh
 tools/getallpofiles.sh -text svneol=native#application/x-sh
 tools/install/build_fpc_rpm.sh -text svneol=native#application/x-sh
+tools/install/build_fpc_snaphot_rpm.sh svneol=native#text/plain
 tools/install/build_fpcsrc_rpm.sh -text svneol=native#application/x-sh
 tools/install/create_clean_fpcsrc_directory.sh -text svneol=native#application/x-sh
 tools/install/create_clean_lazarus_directory.sh -text svneol=native#application/x-sh
@@ -1919,6 +1920,7 @@ tools/install/create_fpc_tgz_from_local_dir.sh -text svneol=native#application/x
 tools/install/create_lazarus_deb.sh -text svneol=native#application/x-sh
 tools/install/create_lazarus_export_tgz.sh -text svneol=native#application/x-sh
 tools/install/create_lazarus_rpm.sh -text svneol=native#application/x-sh
+tools/install/create_lazarus_snapshot_rpm.sh svneol=native#text/plain
 tools/install/create_lazarus_tgz_from_local_dir.sh -text svneol=native#application/x-sh
 tools/install/cvsexportlocal.pas svneol=native#text/pascal
 tools/install/do_nothing.sh -text svneol=native#application/x-sh
