added TMaskEdit.EditMask property editor  from Lagunov Aleksey
 SVN 7576@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -968,9 +968,9 @@ ideintf/imagelisteditor.pp svneol=native#text/pascal
 ideintf/lazideintf.pas svneol=native#text/pascal
 ideintf/listviewpropedit.pp svneol=native#text/pascal
 ideintf/macrointf.pas svneol=native#text/pascal
-ideintf/maskeditorunit.lfm svneol=native#text/plain
-ideintf/maskeditorunit.lrs svneol=native#text/plain
-ideintf/maskeditorunit.pas svneol=native#text/plain
+ideintf/maskpropedit.lfm svneol=native#text/plain
+ideintf/maskpropedit.lrs svneol=native#text/plain
+ideintf/maskpropedit.pas svneol=native#text/plain
 ideintf/menuintf.pas svneol=native#text/plain
 ideintf/newfield.lfm svneol=native#text/plain
 ideintf/newfield.lrs svneol=native#text/pascal
