--- a/ideintf/Makefile.fpc
+++ b/ideintf/Makefile.fpc
@@ -16,29 +16,37 @@ options=-gl
 
 [target]
 units=allideintf
-implicitunits=actionseditor \
-  columndlg \
-  componenteditors \
-  componentreg \
-  componenttreeview \
-  configstorage \
-  fieldseditor \
-  fieldslist \
-  formeditingintf \
-  graphpropedits \
-  helpfpdoc \
-  helphtml \
-  helpintf \
-  idecommands \
-  imagelisteditor \
-  listviewpropedit \
-  newfield \
-  objectinspector \
-  objinspstrconsts \
-  projectintf \
-  propedits \
-  srceditorintf \
-  texttools
+implicitunits=a \
+  ActionsEditor \
+  ColumnDlg \
+  ComponentEditors \
+  ComponentReg \
+  ComponentTreeView \
+  ConfigStorage \
+  DBPropEdits \
+  FieldsEditor \
+  FormEditingIntf \
+  FrmSelectProps \
+  GraphPropEdits \
+  HelpFPDoc \
+  HelpHTML \
+  HelpIntf \
+  IDECommands \
+  IDEWindowIntf \
+  ImageListEditor \
+  LazIDEIntf \
+  ListViewPropEdit \
+  MacroIntf \
+  MaskPropEdit \
+  MenuIntf \
+  NewItemIntf \
+  ObjectInspector \
+  ObjInspStrConsts \
+  PackageIntf \
+  ProjectIntf \
+  PropEdits \
+  SrcEditorIntf \
+  TextTools
 
 [clean]
 files=$(wildcard *$(OEXT)) $(wildcard *$(PPUEXT)) $(wildcard *$(RSTEXT)) \
