* Start of the carbon interface
 SVN 7586@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -1566,14 +1566,43 @@ lcl/include/winapih.inc svneol=native#text/pascal
 lcl/include/wincontrol.inc svneol=native#text/pascal
 lcl/inipropstorage.pas svneol=native#text/pascal
 lcl/interfacebase.pp svneol=native#text/pascal
+lcl/interfaces/carbon/carbondef.pp svneol=native#text/plain
+lcl/interfaces/carbon/carbonextra.pas svneol=native#text/plain
 lcl/interfaces/carbon/carbonimages.lrs svneol=native#text/pascal
-lcl/interfaces/carbon/carbonint.pas svneol=native#text/pascal
-lcl/interfaces/carbon/carbonlclintf.inc svneol=native#text/pascal
-lcl/interfaces/carbon/carbonlclintfh.inc svneol=native#text/pascal
-lcl/interfaces/carbon/carbonobject.inc svneol=native#text/pascal
-lcl/interfaces/carbon/carbonwinapi.inc svneol=native#text/pascal
-lcl/interfaces/carbon/carbonwinapih.inc svneol=native#text/pascal
-lcl/interfaces/carbon/interfaces.pas svneol=native#text/pascal
+lcl/interfaces/carbon/carbonint.pas svneol=native#text/plain
+lcl/interfaces/carbon/carbonlclintf.inc svneol=native#text/plain
+lcl/interfaces/carbon/carbonlclintfh.inc svneol=native#text/plain
+lcl/interfaces/carbon/carbonobject.inc svneol=native#text/plain
+lcl/interfaces/carbon/carbonproc.pp svneol=native#text/plain
+lcl/interfaces/carbon/carbonutils.pas svneol=native#text/plain
+lcl/interfaces/carbon/carbonwinapi.inc svneol=native#text/plain
+lcl/interfaces/carbon/carbonwinapih.inc svneol=native#text/plain
+lcl/interfaces/carbon/carbonwsactnlist.pp svneol=native#text/plain
+lcl/interfaces/carbon/carbonwsarrow.pp svneol=native#text/plain
+lcl/interfaces/carbon/carbonwsbuttons.pp svneol=native#text/plain
+lcl/interfaces/carbon/carbonwscalendar.pp svneol=native#text/plain
+lcl/interfaces/carbon/carbonwschecklst.pp svneol=native#text/plain
+lcl/interfaces/carbon/carbonwsclistbox.pp svneol=native#text/plain
+lcl/interfaces/carbon/carbonwscomctrls.pp svneol=native#text/plain
+lcl/interfaces/carbon/carbonwscontrols.pp svneol=native#text/plain
+lcl/interfaces/carbon/carbonwsdbctrls.pp svneol=native#text/plain
+lcl/interfaces/carbon/carbonwsdbgrids.pp svneol=native#text/plain
+lcl/interfaces/carbon/carbonwsdialogs.pp svneol=native#text/plain
+lcl/interfaces/carbon/carbonwsdirsel.pp svneol=native#text/plain
+lcl/interfaces/carbon/carbonwseditbtn.pp svneol=native#text/plain
+lcl/interfaces/carbon/carbonwsextctrls.pp svneol=native#text/plain
+lcl/interfaces/carbon/carbonwsextdlgs.pp svneol=native#text/plain
+lcl/interfaces/carbon/carbonwsfilectrl.pp svneol=native#text/plain
+lcl/interfaces/carbon/carbonwsforms.pp svneol=native#text/plain
+lcl/interfaces/carbon/carbonwsgrids.pp svneol=native#text/plain
+lcl/interfaces/carbon/carbonwsimglist.pp svneol=native#text/plain
+lcl/interfaces/carbon/carbonwsmaskedit.pp svneol=native#text/plain
+lcl/interfaces/carbon/carbonwsmenus.pp svneol=native#text/plain
+lcl/interfaces/carbon/carbonwspairsplitter.pp svneol=native#text/plain
+lcl/interfaces/carbon/carbonwsspin.pp svneol=native#text/plain
+lcl/interfaces/carbon/carbonwsstdctrls.pp svneol=native#text/plain
+lcl/interfaces/carbon/carbonwstoolwin.pp svneol=native#text/plain
+lcl/interfaces/carbon/interfaces.pas svneol=native#text/plain
 lcl/interfaces/gnome/gnomeint.pp svneol=native#text/pascal
 lcl/interfaces/gnome/gnomelclintf.inc svneol=native#text/pascal
 lcl/interfaces/gnome/gnomelclintfh.inc svneol=native#text/pascal
