started separate code templates dialog
 SVN 7600@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -794,6 +794,8 @@ ide/codeexplorer.lfm svneol=native#text/plain
 ide/codeexplorer.lrs svneol=native#text/pascal
 ide/codeexplorer.pas svneol=native#text/pascal
 ide/codetemplatedialog.pp svneol=native#text/pascal
+ide/codetemplatesdlg.lfm svneol=native#text/plain
+ide/codetemplatesdlg.lrs svneol=native#text/plain
 ide/codetoolsdefines.lrs svneol=native#text/pascal
 ide/codetoolsdefines.pas svneol=native#text/pascal
 ide/codetoolsdefpreview.lfm svneol=native#text/plain
