--- a/tools/apiwizz/Makefile.fpc
+++ b/tools/apiwizz/Makefile.fpc
@@ -35,12 +35,7 @@ endif
 export LCL_PLATFORM
 
 [rules]
-.PHONY: all makefile makefiles
+.PHONY: all
 
 all: 
         $(MAKE) --assume-new=apiwizz.pp apiwizz$(EXEEXT)
-
-makefile: Makefile.fpc
-        -$(FPCMAKE) -w
-       
-makefiles: makefile
