--- a/.gitattributes
+++ b/.gitattributes
@@ -446,9 +446,6 @@ designer/sizecompsdlg.pp svneol=native#text/pascal
 designer/taborderdlg.lfm svneol=native#text/plain
 designer/taborderdlg.lrs svneol=native#text/pascal
 designer/taborderdlg.pas svneol=native#text/pascal
-doceditor/add.xpm -text svneol=native#image/x-xpixmap
-doceditor/delete.xpm -text svneol=native#image/x-xpixmap
-doceditor/edit.xpm -text svneol=native#image/x-xpixmap
 doceditor/eleditor.pp svneol=native#text/pascal
 doceditor/eleditor.xml svneol=native#text/xml
 doceditor/fmmakeskel.lfm svneol=native#text/plain
@@ -487,6 +484,13 @@ doceditor/frmtable.lfm svneol=native#text/plain
 doceditor/frmtable.lrs svneol=native#text/pascal
 doceditor/frmtable.pp svneol=native#text/pascal
 doceditor/icons.lrs svneol=native#text/pascal
+doceditor/images/add.xpm -text svneol=native#image/x-xpixmap
+doceditor/images/delete.xpm -text svneol=native#image/x-xpixmap
+doceditor/images/edit.xpm -text svneol=native#image/x-xpixmap
+doceditor/images/node_edit.xpm -text svneol=native#image/x-xpixmap
+doceditor/images/node_finished.xpm -text svneol=native#image/x-xpixmap
+doceditor/images/node_modified.xpm -text svneol=native#image/x-xpixmap
+doceditor/images/node_new.xpm -text svneol=native#image/x-xpixmap
 doceditor/lazde.lpi svneol=native#text/plain
 doceditor/lazde.lpr svneol=native#text/pascal
 doceditor/lazdemsg.pp svneol=native#text/pascal
