added TTreeView items editor  from Lagunov Aleksey
 SVN 7680@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -993,6 +993,9 @@ ideintf/projectintf.pas svneol=native#text/pascal
 ideintf/propedits.pp svneol=native#text/pascal
 ideintf/srceditorintf.pas svneol=native#text/pascal
 ideintf/texttools.pas svneol=native#text/pascal
+ideintf/treeviewpropedit.lfm svneol=native#text/plain
+ideintf/treeviewpropedit.lrs svneol=native#text/plain
+ideintf/treeviewpropedit.pas svneol=native#text/plain
 images/LazarusForm.bmp -text svneol=unset#image/bmp
 images/LazarusForm.ico -text svneol=unset#image/x-icon
 images/LazarusProject.ico -text svneol=unset#image/x-icon
