--- a/.gitattributes
+++ b/.gitattributes
@@ -883,6 +883,9 @@ ide/lazarusidestrconsts.pas svneol=native#text/pascal
 ide/lazarusmanager.pas svneol=native#text/pascal
 ide/lazconf.pp svneol=native#text/pascal
 ide/lazcwstring.pas svneol=native#text/plain
+ide/lazdocfrm.lfm svneol=native#text/plain
+ide/lazdocfrm.lrs svneol=native#text/plain
+ide/lazdocfrm.pas svneol=native#text/plain
 ide/lrtpotools.pas svneol=native#text/pascal
 ide/macropromptdlg.pas svneol=native#text/pascal
 ide/main.pp svneol=native#text/pascal
