--- a/.gitattributes
+++ b/.gitattributes
@@ -520,45 +520,45 @@ docs/images/laztitle.jpg -text svneol=unset#image/jpeg
 docs/index.html svneol=native#text/html
 docs/xml/README.txt svneol=native#text/plain
 docs/xml/find_cvs_fpdoc_files.pl -text svneol=native#application/x-perl
-docs/xml/lcl/actnlist.xml svneol=native#text/xml
-docs/xml/lcl/alllclunits.xml svneol=native#text/xml
-docs/xml/lcl/arrow.xml svneol=native#text/xml
-docs/xml/lcl/avglvltree.xml svneol=native#text/xml
+docs/xml/lcl/actnlist.xml svneol=LF#text/xml eol=lf
+docs/xml/lcl/alllclunits.xml svneol=LF#text/xml eol=lf
+docs/xml/lcl/arrow.xml svneol=LF#text/xml eol=lf
+docs/xml/lcl/avglvltree.xml svneol=LF#text/xml eol=lf
 docs/xml/lcl/buttons.xml svneol=native#text/xml
-docs/xml/lcl/calendar.xml svneol=native#text/xml
-docs/xml/lcl/chart.xml svneol=native#text/xml
-docs/xml/lcl/checklst.xml svneol=native#text/xml
-docs/xml/lcl/clipbrd.xml svneol=native#text/xml
-docs/xml/lcl/clistbox.xml svneol=native#text/xml
-docs/xml/lcl/colorbox.xml svneol=native#text/xml
-docs/xml/lcl/comctrls.xml svneol=native#text/xml
-docs/xml/lcl/commctrl.xml svneol=native#text/xml
-docs/xml/lcl/controls.xml svneol=native#text/xml
-docs/xml/lcl/customtimer.xml svneol=native#text/xml
-docs/xml/lcl/dbactns.xml svneol=native#text/xml
-docs/xml/lcl/dbctrls.xml svneol=native#text/xml
-docs/xml/lcl/dbgrids.xml svneol=native#text/xml
-docs/xml/lcl/defaulttranslator.xml svneol=native#text/xml
-docs/xml/lcl/dialogs.xml svneol=native#text/xml
-docs/xml/lcl/dirsel.xml svneol=native#text/xml
-docs/xml/lcl/dynamicarray.xml svneol=native#text/xml
-docs/xml/lcl/dynhasharray.xml svneol=native#text/xml
-docs/xml/lcl/editbtn.xml svneol=native#text/xml
-docs/xml/lcl/extctrls.xml svneol=native#text/xml
-docs/xml/lcl/extdlgs.xml svneol=native#text/xml
-docs/xml/lcl/extendedstrings.xml svneol=native#text/xml
-docs/xml/lcl/extgraphics.xml svneol=native#text/xml
-docs/xml/lcl/filectrl.xml svneol=native#text/xml
-docs/xml/lcl/fileutil.xml svneol=native#text/xml
-docs/xml/lcl/forms.xml svneol=native#text/xml
-docs/xml/lcl/fpcadds.xml svneol=native#text/xml
-docs/xml/lcl/graphics.xml svneol=native#text/xml
-docs/xml/lcl/graphmath.xml svneol=native#text/xml
-docs/xml/lcl/graphtype.xml svneol=native#text/xml
-docs/xml/lcl/grids.xml svneol=native#text/xml
-docs/xml/lcl/imglist.xml svneol=native#text/xml
-docs/xml/lcl/inipropstorage.xml svneol=native#text/xml
-docs/xml/lcl/interfacebase.xml svneol=native#text/xml
+docs/xml/lcl/calendar.xml svneol=LF#text/xml eol=lf
+docs/xml/lcl/chart.xml svneol=LF#text/xml eol=lf
+docs/xml/lcl/checklst.xml svneol=LF#text/xml eol=lf
+docs/xml/lcl/clipbrd.xml svneol=LF#text/xml eol=lf
+docs/xml/lcl/clistbox.xml svneol=LF#text/xml eol=lf
+docs/xml/lcl/colorbox.xml svneol=LF#text/xml eol=lf
+docs/xml/lcl/comctrls.xml svneol=LF#text/xml eol=lf
+docs/xml/lcl/commctrl.xml svneol=LF#text/xml eol=lf
+docs/xml/lcl/controls.xml svneol=LF#text/xml eol=lf
+docs/xml/lcl/customtimer.xml svneol=LF#text/xml eol=lf
+docs/xml/lcl/dbactns.xml svneol=LF#text/xml eol=lf
+docs/xml/lcl/dbctrls.xml svneol=LF#text/xml eol=lf
+docs/xml/lcl/dbgrids.xml svneol=LF#text/xml eol=lf
+docs/xml/lcl/defaulttranslator.xml svneol=LF#text/xml eol=lf
+docs/xml/lcl/dialogs.xml svneol=LF#text/xml eol=lf
+docs/xml/lcl/dirsel.xml svneol=LF#text/xml eol=lf
+docs/xml/lcl/dynamicarray.xml svneol=LF#text/xml eol=lf
+docs/xml/lcl/dynhasharray.xml svneol=LF#text/xml eol=lf
+docs/xml/lcl/editbtn.xml svneol=LF#text/xml eol=lf
+docs/xml/lcl/extctrls.xml svneol=LF#text/xml eol=lf
+docs/xml/lcl/extdlgs.xml svneol=LF#text/xml eol=lf
+docs/xml/lcl/extendedstrings.xml svneol=LF#text/xml eol=lf
+docs/xml/lcl/extgraphics.xml svneol=LF#text/xml eol=lf
+docs/xml/lcl/filectrl.xml svneol=LF#text/xml eol=lf
+docs/xml/lcl/fileutil.xml svneol=LF#text/xml eol=lf
+docs/xml/lcl/forms.xml svneol=LF#text/xml eol=lf
+docs/xml/lcl/fpcadds.xml svneol=LF#text/xml eol=lf
+docs/xml/lcl/graphics.xml svneol=LF#text/xml eol=lf
+docs/xml/lcl/graphmath.xml svneol=LF#text/xml eol=lf
+docs/xml/lcl/graphtype.xml svneol=LF#text/xml eol=lf
+docs/xml/lcl/grids.xml svneol=LF#text/xml eol=lf
+docs/xml/lcl/imglist.xml svneol=LF#text/xml eol=lf
+docs/xml/lcl/inipropstorage.xml svneol=LF#text/xml eol=lf
+docs/xml/lcl/interfacebase.xml svneol=LF#text/xml eol=lf
 docs/xml/lcl/interfaces/gtk/gtkdef.xml svneol=native#text/xml
 docs/xml/lcl/interfaces/gtk/gtkfontcache.xml svneol=native#text/xml
 docs/xml/lcl/interfaces/gtk/gtkglobals.xml svneol=native#text/xml
@@ -592,34 +592,34 @@ docs/xml/lcl/interfaces/gtk/gtkwsspin.xml svneol=native#text/xml
 docs/xml/lcl/interfaces/gtk/gtkwsstdctrls.xml svneol=native#text/xml
 docs/xml/lcl/interfaces/gtk/gtkwstoolwin.xml svneol=native#text/xml
 docs/xml/lcl/interfaces/gtk/interfaces.xml svneol=native#text/xml
-docs/xml/lcl/intfgraphics.xml svneol=native#text/xml
-docs/xml/lcl/lazlinkedlist.xml svneol=native#text/xml
-docs/xml/lcl/lcl.xml svneol=native#text/plain
-docs/xml/lcl/lclclasses.xml svneol=native#text/xml
-docs/xml/lcl/lclintf.xml svneol=native#text/xml
-docs/xml/lcl/lclmemmanager.xml svneol=native#text/xml
+docs/xml/lcl/intfgraphics.xml svneol=LF#text/xml eol=lf
+docs/xml/lcl/lazlinkedlist.xml svneol=LF#text/xml eol=lf
+docs/xml/lcl/lcl.xml svneol=LF#text/plain eol=lf
+docs/xml/lcl/lclclasses.xml svneol=LF#text/xml eol=lf
+docs/xml/lcl/lclintf.xml svneol=LF#text/xml eol=lf
+docs/xml/lcl/lclmemmanager.xml svneol=LF#text/xml eol=lf
 docs/xml/lcl/lclproc.xml svneol=native#text/xml
-docs/xml/lcl/lclrescache.xml svneol=native#text/xml
-docs/xml/lcl/lclstrconsts.xml svneol=native#text/xml
-docs/xml/lcl/lcltype.xml svneol=native#text/xml
-docs/xml/lcl/ldocktree.xml svneol=native#text/xml
-docs/xml/lcl/lmessages.xml svneol=native#text/xml
-docs/xml/lcl/lresources.xml svneol=native#text/xml
-docs/xml/lcl/maskedit.xml svneol=native#text/xml
-docs/xml/lcl/menus.xml svneol=native#text/xml
-docs/xml/lcl/pairsplitter.xml svneol=native#text/xml
-docs/xml/lcl/postscriptcanvas.xml svneol=native#text/xml
-docs/xml/lcl/postscriptprinter.xml svneol=native#text/xml
-docs/xml/lcl/printers.xml svneol=native#text/xml
-docs/xml/lcl/propertystorage.xml svneol=native#text/xml
-docs/xml/lcl/spin.xml svneol=native#text/xml
-docs/xml/lcl/stdactns.xml svneol=native#text/xml
-docs/xml/lcl/stdctrls.xml svneol=native#text/xml
-docs/xml/lcl/stringhashlist.xml svneol=native#text/xml
-docs/xml/lcl/textstrings.xml svneol=native#text/xml
-docs/xml/lcl/toolwin.xml svneol=native#text/xml
-docs/xml/lcl/utrace.xml svneol=native#text/xml
-docs/xml/lcl/xmlpropstorage.xml svneol=native#text/xml
+docs/xml/lcl/lclrescache.xml svneol=LF#text/xml eol=lf
+docs/xml/lcl/lclstrconsts.xml svneol=LF#text/xml eol=lf
+docs/xml/lcl/lcltype.xml svneol=LF#text/xml eol=lf
+docs/xml/lcl/ldocktree.xml svneol=LF#text/xml eol=lf
+docs/xml/lcl/lmessages.xml svneol=LF#text/xml eol=lf
+docs/xml/lcl/lresources.xml svneol=LF#text/xml eol=lf
+docs/xml/lcl/maskedit.xml svneol=LF#text/xml eol=lf
+docs/xml/lcl/menus.xml svneol=LF#text/xml eol=lf
+docs/xml/lcl/pairsplitter.xml svneol=LF#text/xml eol=lf
+docs/xml/lcl/postscriptcanvas.xml svneol=LF#text/xml eol=lf
+docs/xml/lcl/postscriptprinter.xml svneol=LF#text/xml eol=lf
+docs/xml/lcl/printers.xml svneol=LF#text/xml eol=lf
+docs/xml/lcl/propertystorage.xml svneol=LF#text/xml eol=lf
+docs/xml/lcl/spin.xml svneol=LF#text/xml eol=lf
+docs/xml/lcl/stdactns.xml svneol=LF#text/xml eol=lf
+docs/xml/lcl/stdctrls.xml svneol=LF#text/xml eol=lf
+docs/xml/lcl/stringhashlist.xml svneol=LF#text/xml eol=lf
+docs/xml/lcl/textstrings.xml svneol=LF#text/xml eol=lf
+docs/xml/lcl/toolwin.xml svneol=LF#text/xml eol=lf
+docs/xml/lcl/utrace.xml svneol=LF#text/xml eol=lf
+docs/xml/lcl/xmlpropstorage.xml svneol=LF#text/xml eol=lf
 docs/xml/multi_makeskel.pl -text svneol=native#application/x-perl
 examples/address_book/addrbook.dpr svneol=native#text/pascal
 examples/address_book/addrbook.lpi svneol=native#text/plain
